# aiogram-course

./: .gitignore  README.md  bot.py  config.py  hello_git.py  main.py  pyproject.toml  test_env.py  test_env2.py
config_data/: config.py
handlers/: other_handlers.py  user_handlers.py
keyboards/: keyboards.py
lexicon/: lexicon.py
services/: services.py
