[tool.poetry]
name = "aiogram-course"
version = "0.1.0"
description = ""
authors = ["Dmitry Sankov <Dmitry.Sankov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
requests = "^2.31.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
jsonpickle = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
